# caption_gen

./: .gitignore  README.md  config.yaml  config_loader.py  pyproject.toml  pytest.ini  requirements.txt  train.py
.github/workflows/: ci.yml
dataset/: __init__.py  dataset.py
experiments/: config.yaml  encoder_selection.ipynb
model/: model.py
tests/: test_captions_utils.py  test_dataset.py  test_images_utils.py  test_model_decoder.py  test_model_encoder.py
utils/: captions_utils.py  images_preprocessing.py  images_utils.py
